--- a/Process_Definition/Forms/混合路由.form
+++ b/Process_Definition/Forms/混合路由.form
@@ -2,11 +2,11 @@
 <!DOCTYPE note SYSTEM 'xmlschemas/domino_8_5_3.dtd'>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='8.5' maintenanceversion='3.0'
  replicaid='48257A85001C85C1'>
-<noteinfo noteid='1f6' unid='0EB87827B4F9FB0048257A61000CDFF9' sequence='2'>
+<noteinfo noteid='1f6' unid='0EB87827B4F9FB0048257A61000CDFF9' sequence='6'>
 <created><datetime>20120821T102037,69+08</datetime></created>
-<modified><datetime>20120926T131135,67+08</datetime></modified>
-<revised><datetime>20120926T131135,66+08</datetime></revised>
-<lastaccessed><datetime>20120926T131135,67+08</datetime></lastaccessed>
+<modified><datetime>20121024T164814,00+08</datetime></modified>
+<revised><datetime>20121024T164813,98+08</datetime></revised>
+<lastaccessed><datetime>20121024T164814,00+08</datetime></lastaccessed>
 <addedtofile><datetime>20120926T131135,65+08</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=沈少尘 20947/O=siyuan</name></updatedby>
 <wassignedby><name>CN=沈少尘 20947/O=siyuan</name></wassignedby>
@@ -28,12 +28,8 @@ hhgBAIAAAAAAAAAAAQABAP///wAQAAAA
 </rawitemdata></item>
 <item name='$WindowTitle' sign='true'><formula>"路由"</formula></item>
 <item name='$Flags'><text>C</text></item>
-<item name='$DesignerVersion'><text>7</text></item>
+<item name='$DesignerVersion'><text>8.5.3</text></item>
 <item name='$$ScriptName' summary='false' sign='true'><text>ProcessElement</text></item>
-<item name='Expression' placeholder='true'>
-<rawitemdata type='0'>
-</rawitemdata></item>
-<item name='ViewIndex' summary='false'><number>0</number></item>
 <item name='Type' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
@@ -49,8 +45,22 @@ hhgBAIAAAAAAAAAAAQABAP///wAQAAAA
 <item name='PROC_DEF_ID' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
-<item name='$Fields'><textlist><text>PROC_DEF_ID</text><text>ID</text><text
->KEY</text><text>NAME</text><text>TYPE</text><text>ViewIndex</text><text>Expression</text></textlist></item>
+<item name='Expression' placeholder='true'>
+<rawitemdata type='0'>
+</rawitemdata></item>
+<item name='ViewIndex' summary='false'><number>0</number></item>
+<item name='ExpressionType' placeholder='true'>
+<rawitemdata type='0'>
+</rawitemdata></item>
+<item name='SelectionScope' placeholder='true'>
+<rawitemdata type='0'>
+</rawitemdata></item>
+<item name='ExpressionInput' placeholder='true'>
+<rawitemdata type='0'>
+</rawitemdata></item>
+<item name='$Fields'><textlist><text>ExpressionInput</text><text>SelectionScope</text><text
+>ExpressionType</text><text>ViewIndex</text><text>Expression</text><text>PROC_DEF_ID</text><text
+>ID</text><text>KEY</text><text>NAME</text><text>TYPE</text></textlist></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -63,7 +73,7 @@ AAIAAAEBAACBAoL/WgADAAIAAAABAAAAoAVANqAFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAhgEAAAAAVIcAAAAAAAAAAAAAAAABAAAABAAAAIMEAwDD/wgAAZHfDt0G
 AACF/4X/DgABAd8OE8K3E9PJ0ggBAC8vLwDeBgAAhf+BAoL/WgAEAAAAAAAAAAAAoAVANqAFAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhgEAAAAAVIUAAAAAAAAAAAAA
-AAABAAAABAAAAIMEBADdBgEA+//7/ywAIQAAAAcCAQAAAAAAAAAAAAAAAADv7+8A////AAEA9/f3
+AAABAAAABAAAAIMEBADdBgEA+//7/ywAIQAAAAkCAQAAAAAAAAAAAAAAAADv7+8A////AAEA9/f3
 AAAAAAAAAFz/PgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOAAAAAAAAAAEA
 AAoAAAAAAQAAAAAA/P86AAAAAAABAAEAAQABAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQCy
 srIAAAAAAAAAAAAAAN4GAQD7/88OoAVPAEgATwBIAAIC0BIAAP4F0Q0AAFUCEREBAQAAgQKC/1oA
@@ -80,37 +90,57 @@ AIX/0BIBAP4F0Q0AAFUCEREBAQAAgQKDBAUA3QYAAIX/hf8OAAEA3wkTw/sTs8bSCAEALy8vAN4G
 AACF/9ASAQFvDtM1gHBVAhERAQEAAIECgwQGAN0GAACF/4X/CAABAN8K0ggBAC8vLwDeBgAAhf/d
 BgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIr/KACKAAAFACACAAAAAAAAAgEA3wkAAAAAAAAA
-AAQAAAAAAE5BTUXeBgAAiv/dBgAAhf+F/wgAAQDfCtIIAQAvLy8A3gYAAIX/0BICAP4F0Q0AAFUC
-EREBAQAAgQKDBAUA3QYAAIX/hf8LAAEA3wkTvPwA0ggBAC8vLwDeBgAAhf/QEgIBbw7TNYBwVQIR
-EQEBAACBAoMEBgDdBgAAhf+F/wgAAQDfCtIIAQAvLy8A3gYAAIX/3QYAAIr//v9QAAAAAAAAAAAA
+AAQAAAAAAE5BTUViDgEAhAAAAAAAAAAAAN4GAACK/90GAACF/4X/CAABAN8K0ggBAC8vLwDeBgAA
+hf/QEgIA/gXRDQAAVQIREQEBAACBAoMEBQDdBgAAhf+F/wsAAQDfCRO8/ADSCAEALy8vAN4GAACF
+/9ASAgFvDtM1gHBVAhERAQEAAIECgwQGAN0GAACF/4X/CAABAN8K0ggBAC8vLwDeBgAAhf/dBgAA
+iv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIr/KACKAAAFACACAAAAAAAAAgEA3wkAAAAAAAAAAAMA
+AAAAAEtFWQBiDgEAhAAAAAAAAAAAAN4GAACK/90GAACF/4X/CAABAN8K0ggBAC8vLwDeBgAAhf/Q
+EgMA/gXRDQAAVQIREQEBAACBAoL/WgAHAAMAAAAAAAAADQbRDQ0GAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhoEAAAAAVYcAAAAAAAAAAAAAAAABAAAABgAAAIMEBwDd
+BgAAhf+F/xEAAQDfCROx6hPKvhO3+wDSCAEALy8vAN4GAACF/9ASAwFvDtM1gHBVAhERAQEAAIEC
+gv9aAAgAAAAAAAAAAAB+DtM1fg4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAACGgQAAAABVhwAAAAAAAAAAAAAAAAEAAAAGAAAAgwQIAN0GAACF/4X/CAABAN8K0ggBAC8v
+LwDeBgAAhf/dBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIr/JgCKAAAFACACAAAAAAAAAgEA
+3wkAAAAAAAAAAAIAAAAAAElEYg4BAIQAAAAAAAAAAADeBgAAiv/dBgAAhf+F/wgAAQDfCtIIAQAv
+Ly8A3gYAAIX/0BIEAP4F0Q0AAFUCEREBAQAAgQKDBAUA3QYAAIX/hf8WAAEA3wkTwfcTs8wTtqgT
+0uVJRNIIAQAvLy8A3gYAAIX/0BIEAW8O0zWAcFUCEREBAQAAgQKDBAgA3QYAAIX/hf8IAAEA3wrS
+CAEALy8vAN4GAACF/90GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv9IAIgBAAUAMAIAAAAA
+AAACAQDfCRgAAAAAAAAACwAAAAAAGAAAABYABQALAFBST0NfREVGX0lEAAMAUFJPQ19ERUZfSUQA
+Yg4BAIQAAAAAAAAAAADeBgAAiv/dBgAAhf+F/wgAAQDfCdIIAQAvLy8A3gYAAIX/0BIFAP4F0Q0A
+AFUCEREBAQAAgQKDBAUA3QYAAIX/hf8XAAEA3wkTytMTzbwTxcUT0PITusUA0ggBAC8vLwDeBgAA
+hf/QEgUBbw7TNYBwVQIREQEBAACBAoMEBgCF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAACK/ygAigAABQAgAgAAAAAAAAIBAN8JAAAAAAAAAAADAAAAAABLRVkA3gYAAIr/
-3QYAAIX/hf8IAAEA3wrSCAEALy8vAN4GAACF/9ASAwD+BdENAABVAhERAQEAAIECgv9aAAcAAwAA
-AAAAAAANBtENDQYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGgQAA
-AABVhwAAAAAAAAAAAAAAAAEAAAAGAAAAgwQHAN0GAACF/4X/EQABAN8JE7HqE8q+E7f7ANIIAQAv
-Ly8A3gYAAIX/0BIDAW8O0zWAcFUCEREBAQAAgQKC/1oACAAAAAAAAAAAAH4O0zV+DgAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIaBAAAAAFWHAAAAAAAAAAAAAAAAAQAA
-AAYAAACDBAgA3QYAAIX/hf8IAAEA3wrSCAEALy8vAN4GAACF/90GAACK//7/UAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAiv8mAIoAAAUAIAIAAAAAAAACAQDfCQAAAAAAAAAAAgAAAAAASUTeBgAAiv/dBgAA
-hf+F/wgAAQDfCtIIAQAvLy8A3gYAAIX/0BIEAP4F0Q0AAFUCEREBAQAAgQKDBAUA3QYAAIX/hf8W
-AAEA3wkTwfcTs8wTtqgT0uVJRNIIAQAvLy8A3gYAAIX/0BIEAW8O0zWAcFUCEREBAQAAgQKDBAgA
-3QYAAIX/hf8IAAEA3wrSCAEALy8vAN4GAACF/90GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-iv9IAIgBAAUAMAIAAAAAAAACAQDfCRgAAAAAAAAACwAAAAAAGAAAABYABQALAFBST0NfREVGX0lE
-AAMAUFJPQ19ERUZfSUQA3gYAAIr/3QYAAIX/hf8IAAEA3wnSCAEALy8vAN4GAACF/9ASBQD+BdEN
-AABVAhERAQEAAIECgwQFAN0GAACF/4X/GgABAN8JE8/CE9K7E73aE7XjE7mrE8q90ggBAC8vLwDe
-BgAAhf/QEgUBbw7TNYBwVQIREQEBAACBAoMEBgCF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAiv8uAIoAAAUAIAIAAAAAAAACAQDfCQAAAAAAAAAACgAAAAAARXhwcmVzc2lvbt4G
-AACK/4X/CAABAAAK0BIGAP4F0Q0AAFUCEREBAQAAgQKDBAUA3QYAAIX/hf8XAAEA3wkTytMTzbwT
-xcUT0PITusUA0ggBAC8vLwDeBgAAhf/QEgYBbw7TNYBwVQIREQEBAACBAoMEBgDdBgAAhf+F/wgA
-AQDfCdIIAQAvLy8A3gYAAIX/3QYAAIr//v9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACK/y4AigAAAwAw
-AgAAAAAAAAIBAN8JAAAAAAAAAAAJAAAAAABWaWV3SW5kZXgA3gYAAIr/3QYAAIX/hf8IAAEA3wnS
-CAEALy8vAN4GAACF/9EGAAAAAIECgv9aAAkAAAAAAAAAAACgBUA2oAUAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhwAAAAAAAAAAAAAAAAEAAAAEAAAAgwQJ
-AIX/CAABAAAKpQYAAAAAgQKDBAIAhf8IAAEAAAo=
+AAAAAAAAiv8uAIoAAAMAMAIAAAAAAAACAQDfCQAAAAAAAAAACQAAAAAAVmlld0luZGV4AN4GAACK
+/4X/CAABAAAK0BIGAP4F0Q0AAFUCEREBAQAAgQKDBAUAhf8OAAEAAAoTwOAT0M3QEgYBbw7TNYBw
+VQIREQEBAACBAoMEBgCF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv9OAIoC
+AAUAMAIAAAAAAAACAQDPCQAAAAAAAAAADgAAABwARXhwcmVzc2lvblR5cGUCAAgADgATuasTyr18
+MRPTwxO7pxPRoRPU8Xwy3gYAAIr/hf8IAAEAAArQEgcA/gXRDQAAVQIREQEBAACBAoMEBQCF/xwA
+AQAAChPRoRPU8RO3thPOpygTuasTyr0p0BIHAW8O0zWAcFUCEREBAQAAgQKC/1oACQAAAAAAAAAA
+AH4O0zV+DgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYJAAAAAFSH
+AAAAAAAAAAAAAAAAAQAAAAQAAAC7/zwACQATAHLjpGNYsy4AAAAgAAUADgBFeHByZXNzaW9uVHlw
+ZQEAAQAyAAsCAwAHAAwABQAJMFMwRQCDBAkAhf8IAAEAAArdBgAAiv/+/1AAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAIr/MgCKAAEFBjACAAAAAAAAAgEAzwkAAAAAAAAAAA4AAAAAAFNlbGVjdGlvblNjb3Bl
+Yg4BAIQAAAAAAAAAAADeBgAAiv+F/wgAAQAACtASCAD+BdENAABVAhERAQEAAIECgwQFAN0GAACF
+/4X/GgABAN8JE8/CE9K7E73aE7XjE7mrE8q90ggBAC8vLwDeBgAAhf/QEggBbw7TNYBwVQIREQEB
+AACBAoL/WgAKAAAAAAAAAAAAfg7TNX4OAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAhgkAAAAAVIcAAAAAAAAAAAAAAAABAAAABAAAALv/PAAKABMAcuOkY1izLgAAACAA
+BQAOAEV4cHJlc3Npb25UeXBlAQABADEACwIDAAcADAAFAAkwUzBFAIMECgCF/wgAAQAACt0GAACK
+//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv80AIoAAAUAIAIAAAAAAAACAQDfCQAAAAAAAAAADwAA
+AAAARXhwcmVzc2lvbklucHV0AGIOAQCEAAAAAAAAAAAA3gYAAIr/hf8IAAEAAAqBAoMECQCF/wgA
+AQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv+2AIgBAAUAIAIAAAAAAAACAQDfCYgA
+AAAAAAAACgAAAAAAiAAAAHoABQAOAEV4cHJlc3Npb25UeXBlAQABADEACgKvAFgAGgAFAA8ARXhw
+cmVzc2lvbklucHV0AK4APgAFAA4ARXhwcmVzc2lvblR5cGUBAAEAMgAKAq8AIAAUAAEACQBVc2Vy
+SW5wdXQArgAMAAEAAACuAAQAtQUDAAcADAAFAAkwUzBFAEV4cHJlc3Npb25iDgEAhAAAAAAAAAAA
+AN4GAACK/4X/CAABAAAK0QYAAAAAgQKC/1oACwAAAAAAAAAAAKAFQDagBQAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSHAAAAAAAAAAAAAAAAAQAAAAQAAACD
+BAsAhf8IAAEAAAqlBgAAAACBAoMEAgCF/wgAAQAACg==
 </rawitemdata></item>
 <item name='$V5ACTIONS' sign='true'>
 <rawitemdata type='1'>
